Showing weather forecast on the web page .search by Cityname.

--- a/src/main/resources/templates/forecast.html
+++ b/src/main/resources/templates/forecast.html
@@ -62,7 +62,7 @@
                             <div id="temperature" class="col-6 text-left">Temperature</div>
                             <div id="temp" class="col-6 text-right" th:text="${temp}"></div>
 
-                            <div id="feels_like"  class="col-6 text-left">Feels_like</div>
+                            <div id="feels_like"  class="col-6 text-left">Feels like</div>
                             <div id="feelsLike"  class="col-6 text-right" th:text="${feels_like}"></div>
 
                             <div id="temp_min"   class="col-6 text-left">Minimum Temperature</div>
