--- a/src/main/resources/templates/forecast.html
+++ b/src/main/resources/templates/forecast.html
@@ -31,7 +31,12 @@
                 <i class="fas fa-sun"> </i> <strong>Weather app</strong>
                 <span id="date"   class="lead" > </span>
                 <span id="time" class="lead" > </span>
+                <link >
+                <a  class="navbar-brand" style="color: aliceblue; text-align-last: right " href="/welcome"  >Go to search page</a>
+                <a  class="navbar-brand" style="color: aliceblue" href="/welcome/viewSearch" >View History</a></link>
             </a>
+
+            </th>
         </nav>
     </div>
     <br>
@@ -52,7 +57,7 @@
                 <div id="" class="col-6 mx-auto weather">
                     <!-- weather header section -->
                      <div class="weather-head"style="color:rgb(69,106,171) ">
-                        <h1 id="city name" class="text-center display-6"th:text="${name}">Copenhagen Dk</h1>
+                        <h1 id="city name" class="text-center display-6"th:text="${name}"> </h1>
                             </div>
                         <br>
                     <div class="row" >
